# money

./: .gitignore  README.md  pyproject.toml
data/: policy_events.real.csv  sentiment.sample.csv
scripts/: run_stable_signal.sh  run_web_dashboard.sh
src/money_strategy/: __init__.py  backtest.py  cli.py  config.py  data.py  news.py  optimizer.py  sentiment.py  signals.py  validation.py
tests/: test_backtest.py  test_data.py  test_news.py  test_optimizer.py  test_sentiment.py  test_signals.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  styles.css
