[project]
name = "money-strategy"
version = "0.1.0"
description = "A-share ETF multi-signal rotation backtest"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.17,<1.19",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "requests>=2.32",
]

[project.scripts]
money-strategy = "money_strategy.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
